# embedded-graphics-gba

./: .gitignore  Cargo.toml  Makefile.toml  README.md
assets/: background.tga  convert-to-tga.sh
examples/: draw.rs  thumbv4-none-agb.json
src/: lib.rs
